[package]
name = "crisco"
version = "0.1.0"
authors = [
    "Elijah C. Voigt <elijahcainemv@gmail.com>"
]
readme = "README.md"
description = "A URL Shortener."
license = "MIT"

[dependencies]
diesel = "0.7.1"
diesel_codegen = { version = "0.7.2", default-features = false, features = ["sqlite"] }
dotenv = "0.8.0"
dotenv_macros = "0.9.0"
iron = "0.4.0"
