[package]
name = "crisco"
version = "0.1.0"
authors = [
    "Elijah C. Voigt <elijahcainemv@gmail.com>"
]
readme = "README.md"
description = "A URL Shortener."
license = "MIT"

[dependencies]
diesel = "0.7.1"
dotenv = "0.8.0"
dotenv_macros = "0.9.0"
iron = "0.4.0"
router = "0.3.0"
liquid = "0.8.4"

[dependencies.diesel_codegen_syntex]
version = "0.7.2"
default-features = false
features = ["sqlite"]

[dependencies.diesel_codegen]
version = "0.7.2"
default-features = false
features = ["sqlite"]
